syntax = "proto3";

option java_package = "cn.aberic.fabric-client.grpc.proto.chain";
option java_outer_classname = "ChainCodeProto";
option go_package = "grpc/proto/chain";

package chain;

message ChainCodeInfo {
    string name = 1;
    string version = 2;
    string path = 3;
    string input = 4;
    string escc = 5;
    string vscc = 6;
    bytes id = 7;
}

message CCList {
    repeated ChainCodeInfo data = 1;
}

message Upload {
    string ledgerName = 1;
    string name = 2;
    string version = 5;
    bytes data = 6;
}

message Install {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string name = 4;
    string source = 5;
    string path = 6;
    string version = 7;
    string peerName = 8;
}

message Installed {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string peerName = 4;
}

message Instantiate {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string channelID = 4;
    string name = 5;
    string path = 6;
    string version = 7;
    repeated string orgPolicies = 8;
    repeated bytes args = 9;
    string peerName = 10;
}

message Instantiated {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string channelID = 4;
    string peerName = 5;
}

message Upgrade {
    string configID = 1;
    string orgName = 2;
    string orgUser = 3;
    string channelID = 4;
    string name = 5;
    string path = 6;
    string version = 7;
    repeated string orgPolicies = 8;
    repeated bytes args = 9;
    string peerName = 10;
}

message Invoke {
    string configID = 1;
    string channelID = 2;
    string chainCodeID = 3;
    string orgName = 4;
    string orgUser = 5;
    string fcn = 6;
    repeated bytes args = 7;
    repeated string targetEndpoints = 8;
}

message InvokeAsync {
    string configID = 1;
    string channelID = 2;
    string chainCodeID = 3;
    string orgName = 4;
    string orgUser = 5;
    string fcn = 6;
    string callback = 7;
    repeated bytes args = 8;
    repeated string targetEndpoints = 9;
}

message Query {
    string configID = 1;
    string channelID = 2;
    string chainCodeID = 3;
    string orgName = 4;
    string orgUser = 5;
    string fcn = 6;
    repeated bytes args = 7;
    repeated string targetEndpoints = 8;
}